--- a/learn-nextjs/sanityCMS/package.json
+++ b/learn-nextjs/sanityCMS/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.17.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.16.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "contentful": "^10.5.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
-    "formik": "^2.4.4",
     "next": "13.4.13",
+    "next-sanity": "^5.5.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "yup": "^1.2.0"
+    "sanity": "^3.16.7",
+    "styled-components": "5.2",
+    "tailwindcss": "3.3.3"
   }
 }
