--- a/learn-nextjs/next-firebase-orm/package.json
+++ b/learn-nextjs/next-firebase-orm/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
-    "mongoose": "^7.5.3",
+    "firebase": "^10.4.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
-    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
