--- a/learn-nextjs/next-mongoose-orm/.env
+++ b/learn-nextjs/next-mongoose-orm/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://test:pass1214@cluster0.z9tlzpb.mongodb.net/test?retryWrites=true&w=majority"
+DATABASE_CONNECTION_STRING="mongodb+srv://admin:1214@classcluster.mwxmiov.mongodb.net/classbatch6?retryWrites=true&w=majority"
