--- a/learn-nextjs/next-mongoose-orm/package.json
+++ b/learn-nextjs/next-mongoose-orm/package.json
@@ -20,5 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.38",
+    "typescript": "5.3.2"
   }
 }
